// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`frodo config-manager push secrets "frodo config-manager push secrets --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud ": should import the secrets into cloud" 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud ": should import the secrets into cloud" 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
Secret esv-fr-test-secret created version 4
Error importing secret from "esv-prune-secrets.json"
No value found for placeholder "ESV_PRUNE_SECRETS"
Secret esv-test-secret created version 3
Secret esv-test-secret created version 4
Secret esv-test-secret created version 5
Secret esv-test-secret created version 6
Secret esv-test-secret created version 7
Secret esv-test-secret created version 8
• Finished importing secrets.
Changes made to secrets: 2 updated, 0 unchanged
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="test1" test/e2e/exports/fr-config-manager/cloud": should import the specified secret into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-fr-test-secret -E ESV_FR_TEST_SECRET="test1" test/e2e/exports/fr-config-manager/cloud": should import the specified secret into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
Secret esv-fr-test-secret created version 3
• Finished importing secrets.
Changes made to secrets: 1 updated, 0 unchanged
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-test-secret --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud": should import multiple versions of the specified secret into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -n esv-test-secret --env-file test/e2e/env/configManager1.env -D test/e2e/exports/fr-config-manager/cloud": should import multiple versions of the specified secret into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
Secret esv-test-secret created version 15
Secret esv-test-secret created version 16
Secret esv-test-secret created version 17
Secret esv-test-secret created version 18
Secret esv-test-secret created version 19
Secret esv-test-secret created version 20
• Finished importing secrets.
Changes made to secrets: 1 updated, 0 unchanged
"
`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -p -n esv-prune-secrets -E ESV_PRUNE_SECRETS=test3  -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 1`] = `""`;

exports[`frodo config-manager push secrets "frodo config-manager push secrets -p -n esv-prune-secrets -E ESV_PRUNE_SECRETS=test3  -D test/e2e/exports/fr-config-manager/cloud": should import multiple specified secrets into cloud 2`] = `
"Experimental feature in use: 'frodo config-manager push secrets'. This feature may change without notice.
• Pruned 3 versions from secret esv-prune-secrets.
Secret esv-prune-secrets pruned version 3
Secret esv-prune-secrets pruned version 2
Secret esv-prune-secrets pruned version 1
Secret esv-prune-secrets unchanged version 4
• Finished importing secrets.
No changes, (1 secrets(s) already up to date)
"
`;
